Fixed contrast section in Front page

--- a/static/src/sass/pages/front/_contrast.sass
+++ b/static/src/sass/pages/front/_contrast.sass
@@ -7,3 +7,15 @@
 
 	&__footer
 		margin-bottom: -75px
+
+	&__content
+		display: none
+		margin-bottom: 30px
+
+		text-align: center
+
+		p:not(:last-child)
+			margin-bottom: 15px
+
+		+min(md)
+			font-size: 20px
